--- a/StandaloneViewer/StandaloneViewer/package.json
+++ b/StandaloneViewer/StandaloneViewer/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.53",
     "cornerstone-web-image-loader": "^2.1.0",
-    "loglevel": "^1.6.1"
+    "loglevel": "^1.6.1",
+    "underscore": "^1.9.1",
+    "xml-writer": "^1.7.0"
   }
 }
