--- a/extensions/ohif-cornerstone-extension/package.json
+++ b/extensions/ohif-cornerstone-extension/package.json
@@ -21,7 +21,7 @@
   "peerDependencies": {
     "cornerstone-core": "^2.2.8",
     "cornerstone-math": "^0.1.8",
-    "cornerstone-tools": "^3.1.0",
+    "cornerstone-tools": "vNext",
     "cornerstone-wado-image-loader": "^2.2.3",
     "dcmjs": "^0.3.8",
     "dicom-parser": "^1.8.3",
@@ -39,7 +39,7 @@
     "@babel/runtime": "^7.2.0",
     "classnames": "^2.2.6",
     "lodash.throttle": "^4.1.1",
-    "react-cornerstone-viewport": "0.1.30"
+    "react-cornerstone-viewport": "^0.1.30"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
