--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
-    "@ohif/extension-cornerstone": "0.0.37",
+    "@ohif/extension-cornerstone": "file:.yalc/@ohif/extension-cornerstone",
     "@ohif/extension-dicom-html": "0.0.3",
     "@ohif/extension-dicom-microscopy": "0.0.8",
     "@ohif/extension-dicom-pdf": "0.0.7",
@@ -81,7 +81,7 @@
     "classnames": "^2.2.6",
     "cornerstone-core": "^2.2.8",
     "cornerstone-math": "^0.1.8",
-    "cornerstone-tools": "^3.13.0",
+    "cornerstone-tools": "vNext",
     "cornerstone-wado-image-loader": "^2.2.3",
     "dcmjs": "^0.4.7",
     "dicom-parser": "^1.8.3",
